kubernetes/arr/prowlarr/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: prowlarr
  labels:
    app: prowlarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      enableServiceLinks: true
      securityContext:
      containers:
      - name: prowlarr
        image: linuxserver/prowlarr:develop
        ports:
        - containerPort: 9696
          name: http
        securityContext:
          privileged: false
        volumeMounts:
        - name: prowlarr-data
          mountPath: /config
      volumes:
      - name: prowlarr-data
        persistentVolumeClaim:
          claimName: prowlarr-data-pvc
